WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310338
Client should be notified to dismiss its immersive presentation in case the website crashes
https://bugs.webkit.org/show_bug.cgi?id=310338
Summary
Client should be notified to dismiss its immersive presentation in case the w...
Jean Haberer
Reported
2026-03-20 02:32:59 PDT
If the website crashes, the client should know to dismiss its immersive presentation to avoid corrupted states.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-20 02:33:08 PDT
<
rdar://problem/172988768
>
Jean Haberer
Comment 2
2026-03-20 02:36:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60990
EWS
Comment 3
2026-03-20 07:17:08 PDT
Committed
309618@main
(73caff27ceed): <
https://commits.webkit.org/309618@main
> Reviewed commits have been landed. Closing PR #60990 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug