Client should be notified to dismiss its immersive presentation in case the website crashes https://bugs.webkit.org/show_bug.cgi?id=310338 rdar://172988768

Reviewed by Etienne Segonzac.

The issue was that the client was not notified on WebPageProxy::resetState,
which is needed to avoid corrupted states between the chrome client and WebKit.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::resetState):

Canonical link: https://commits.webkit.org/309618@main